--- a/euh-emm/Cargo.toml
+++ b/euh-emm/Cargo.toml
@@ -6,8 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+itertools = "0.10.5"
+nalgebra = "0.31.2"
 rand = "0.8.5"
 statrs = "0.16.0"
+thiserror = "1.0.37"
 
 [profile.release]
 debug = true
