--- a/euh-emm/Cargo.toml
+++ b/euh-emm/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 itertools = "0.10.5"
-nalgebra = "0.31.2"
+nalgebra = {version = "0.31.2", features = ["rand"]}
 rand = "0.8.5"
 statrs = "0.16.0"
 thiserror = "1.0.37"
