--- a/euh-emm/Cargo.toml
+++ b/euh-emm/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+approx = "0.5.1"
+csv = "1.1.6"
 itertools = "0.10.5"
 nalgebra = {version = "0.31.2", features = ["rand"]}
 rand = "0.8.5"
