--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,25 @@
 *.log
 *.synctex.gz
 *.xdv
+*.py
+.ipynb_checkpoints/
+Bracone-v0-marked.pdf
+em.ipynb
+euh-emm/Cargo.lock
+euh-emm/target/
+jl-bmg/
+presentation/emgs_n100_d50.png
+presentation/huge_n100_d50.png
+presentation/presentation.nav
+presentation/presentation.out
+presentation/presentation.snm
+presentation/presentation.toc
+r-bmg/.RData
+r-bmg/.Rhistory
+r-bmg/x.csv
+summary/bib.bib
+summary/summary.bbl
+summary/summary.bcf
+summary/summary.blg
+summary/summary.out
+summary/summary.run.xml
