--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,6 @@ summary/summary.blg
 summary/summary.out
 summary/summary.run.xml
 summary/pictures/
+summary-blx.bib
+summary.tex.bbl
+summary.tex.blg
